package rsb.protocol.operatingsystem;

option java_outer_classname = "ProcessType";

/**
 * Basic information about an operatingsystem process.
 *
 * @author Jan Moringen <jmoringe@techfak.uni-bielefeld.de>
 */
message Process {

    /**
     * Should uniquely identify the process on one machine.
     *
     * On POSIX systems, a string representation of the PID is used.
     */
    required string id                    = 1;

    /**
     * Name of the program executed by the process.
     *
     * Should not include the full path of the program. TODO or should it?
     *
     * On POSIX systems, argv[0].
     */
    required string program_name          = 2;

    /**
     * List of commandline arguments with which the process has been
     * started.
     *
     * On POSIX systems, does not include argv[0], i.e. argv[1:].
     */
    repeated string commandline_arguments = 3;

    /**
     * Start time of the process encoded as a timestamp in UTC in
     * microseconds since UNIX epoch.
     *
     * http://docs.cor-lab.org/rsb-manual/trunk/html/specification-event.html#timestamps
     */
    required uint64 start_time            = 4;

    /**
     * Login- or account-name of the user executing the process.
     *
     * Can be omitted when not known, for example because of security
     * policy constraints.
     */
    optional string executing_user        = 5;

    /**
     * The version of the RSB implementation used in this process.
     *
     * The version string is of the form
     *
     *   MAJOR.MINOR.REVISION[-COMMIT]
     */
    optional string rsb_version           = 7;

    /**
     * A user-defined name for the process.
     */
    optional string display_name          = 8;

}
